<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp"/>

    <TextView
        android:id="@+id/titleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        android:layout_marginTop="270dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/inputNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"
        android:autofillHints="name"
        android:importantForAutofill="yes"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/hint_text"
        android:padding="12dp"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/titleRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/inputApellidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_apellidos"
        android:autofillHints="name"
        android:importantForAutofill="yes"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/hint_text"
        android:padding="12dp"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/inputNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:autofillHints="emailAddress"
        android:importantForAutofill="yes"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/hint_text"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/inputApellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:autofillHints="password"
        android:importantForAutofill="yes"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/hint_text"
        android:padding="12dp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confirm_password"
        android:autofillHints="password"
        android:importantForAutofill="yes"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/hint_text"
        android:padding="12dp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_crear_cuenta"
        android:textColor="@color/button_text"
        android:backgroundTint="@color/primary_color"
        android:padding="12dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/inputConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>